fila com 100% de cobertura nos testes + adicionado NodeCaching e AbstractLinkedList